--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	h1
 		{
 			color: white;
-			font-family;"Arial Narrow";
+			font-family:"Arial";
 			font-weight:150%;
 			text-align: center left ;
 
@@ -29,40 +29,61 @@
 		font-family: "Arial Narrow";
 		font-size:500%;
 		font-weight:700;
+		
 
 	}
 	</style>
 	
-</head>
 
-<body>
-<script >
-
-	var array= ["Plumber","Painter", "Carpenter", "Electrician","Photographer"];
-	function Change( var i)
+<script language="javascript" type="text/javascript">
+var timerid = 0;
+var text = new Array("Providing a hassle-free way to hire Electricians.","Providing a hassle-free way to hire Photographers.", "Providing a hassle-free way to hire Plumbers.","Providing a hassle-free way to hire Carpenters.", "Providing a hassle-free way to hire Painters.", "Providing a hassle-free way to hire Gardeners.", "Providing a hassle-free way to hire Party-Planners.", "Providing a hassle-free way to hire Masons.");
+var countimages = 0;
+function startTime()
+{
+	if(timerid)
 	{
-		document.write("Hiring" + array[i]) ;
-		i++;
-		i=i%5;
-		setTimeout("Change(i)", 8000);
+		timerid = 0;
 	}
-	window.onload=Change(0);
+	var tDate = new Date();
+	
+	if(countimages == text.length)
+	{
+		countimages = 0;
+	}
+
+	if(tDate.getSeconds() % 1== 0)
+	{
+		document.getElementById("Hire").innerHTML = text[countimages];
+	}
+	countimages++;
+	
+	timerid = setTimeout("startTime()", 2000);
+}
 </script>
+</head>
+<body onload= "startTime();">
+
+
 	<h1> HireService </h1>
 	
-	<p id ="Hire"
-	  style="text-align: center;
-	  		color: white ;
-			font-family: Times New Roman;
-			font-size:300%;
-			font-weight:500;">
-	
+	<p  >
 		
+		 Services Starting Soon !
 	</p>
-	<p >
-	<br> </br>
-		 Services Starting Soon !!
+	<br></br>
+
+	<p id ="Hire"
+	  style="text-align: left ;
+	  		color: white ;
+			font-family: Lucida Sans Unicode;
+			font-size:300%;
+			font-weight:650;
+			margin-left: 100px;
+			">
+
 	</p>
+	
 	
 </body>
 
